--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <div class="bg-amber-100 h-8 w-5/6 m-auto flex justify-between mt-1">
         <div class="">
           <ul class="ml-4">
-            <li class="inline mr-4 font-medium"><a href="trangchu">Trang chủ</a></li>
-            <li class="inline mr-4 font-medium"><a href="gioithieu">Giới thiệu</a></li>
-            <li class="inline mr-4 font-medium"><a href="lienhe">Liên hệ</a></li>
-            <li class="inline mr-4 font-medium"><a href="baiviet">Bài viết</a></li>
+            <li class="inline mr-4 font-medium"><a href="/">Trang chủ</a></li>
+            <li class="inline mr-4 font-medium"><a href="/gioithieu">Giới thiệu</a></li>
+            <li class="inline mr-4 font-medium"><a href="/lienhe">Liên hệ</a></li>
+            <li class="inline mr-4 font-medium"><a href="/baiviet">Bài viết</a></li>
           </ul>
         </div>
         <div class="mt-1 mr-4">
